<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:backgroundTint="#EEEEEA"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/img"
            android:contentDescription="@string/user"
            android:layout_marginLeft="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                tools:ignore="Useless Parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ankush_Raj"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Ankush_UPI"
                        android:layout_marginLeft="10dp"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/img_3"
                        android:layout_marginLeft="80dp"
                        android:contentDescription="@string/qr"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="195dp"
                            android:layout_marginLeft="135dp"
                            android:src="@drawable/notif"
                            android:contentDescription="@string/notification"/>
                </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img_5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pay_now"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            android:elevation="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_marginBottom="15dp">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                >

            </LinearLayout>



        </androidx.cardview.widget.CardView>



    </LinearLayout>
</ScrollView>
</LinearLayout>